Removed one useless level in the HTML file. Fixed the overlapping problem with z-index set to 1. Tried to change the display property as you suggested to Alice, but didn't find a way to work around the 4px-size difference at the bottom of the kitten photo yet.

--- a/css/kittyCat.css
+++ b/css/kittyCat.css
@@ -1,7 +1,10 @@
-/* ===== BODY ===== */
+/* ===== Other settings ===== */
 
-body {
-    background-color: pink;
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 
@@ -9,8 +12,9 @@ body {
 
 .header {
     background-color: rgba(255,255,255,1);
-    float: left;
+    position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 .header h1 {
@@ -22,11 +26,9 @@ body {
 
 /* ===== MAIN CONTENT ===== */
 
-#mainContentWrapper {
-    text-align: center;
-}
 
 .mainContent {
+    background-color: pink;
     display:inline-block;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
@@ -34,21 +36,22 @@ body {
 
 .mainContent h2 {
     font-size: 1.3em;
+    margin-top: 4.5em;
     margin-bottom: 0.5em;
 }
 
-#photoWrapper {
+#photoGallery {
     width: 45em;
 }
 
-.photoUnitContainer {
+.photoContainer {
     display: inline-block;
     margin: 0.5em;
     position: relative;
     width: 12em;
 }
 
-.photoUnitContainer img {
+.photoItem {
     width: 12em;
 }
 
